--- a/index.css
+++ b/index.css
@@ -54,6 +54,10 @@ header .shopping img{
      width: 500px;
     height: 100vh;
     transition: 0.5s;
+    max-height: 400px; /* Adjust the height as needed */
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    padding: 10px;
 }
 
 .card h1{
@@ -73,12 +77,19 @@ width: 100%;
 display: grid;
 grid-template-columns: repeat(2,1fr);
 }
-payment{
-    width: 50%;
-    height: 50%
-    cuesor: pointer;
-    align-items: center;
-    font-weight: bold;
+.payButton {
+background-color: #4CAF50; /* Green */
+border: none;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+cursor: pointer;
+border-radius: 4px;
+}
     
 }
 .card .checkOut div{
