--- a/index.css
+++ b/index.css
@@ -72,20 +72,20 @@ width: 100%;
 display: grid;
 grid-template-columns: repeat(2,1fr);
 }
-.payButton {
+/* .payButton {
 background-color: #4CAF50; /* Green */
-border: none;
-color: white;
-padding: 15px 32px;
+/* border: none;
+color: white; */
+/* padding: 15px 32px;
 text-align: center;
 text-decoration: none;
-display: inline-block;
-font-size: 16px;
+display: inline-block; */
+/* font-size: 16px;
 margin: 4px 2px;
 cursor: pointer;
 border-radius: 4px;
-} 
-    
+}  */
+     
 }
 .card .checkOut div{
     background-color: #e8bc06;
