--- a/index.css
+++ b/index.css
@@ -49,11 +49,12 @@ header .shopping img{
     position: fixed;
     top: 0;
     left: 100%;
-     color: #e8bc06;
+/*      color: #e8bc06; */
      background-color: #453E38; 
-      left: calc(100% - 500px); 
+/*       left: calc(100% - 500px);  */
      width: 500px;
     height: 100vh;
+    transition: -.5s;
 }
 
 .card h1{
@@ -68,26 +69,25 @@ header .shopping img{
 
 .card .checkOut{
 position: absolute;
-background-color: #e8bc06;
+/* background-color: #e8bc06; */
 bottom: 0;
 width: 100%;
 display: grid;
 grid-template-columns: repeat(2,1fr);
-padding: 20px;
 }
-/* .payButton {
+.payButton {
 background-color: #4CAF50; /* Green */
-/* border: none;
-color: white; */
-/* padding: 15px 32px;
+border: none;
+color: white;
+padding: 15px 32px;
 text-align: center;
 text-decoration: none;
-display: inline-block; */
-/* font-size: 16px;
+display: inline-block;
+ font-size: 16px;
 margin: 4px 2px;
 cursor: pointer;
 border-radius: 4px;
-}  */
+} 
      
 }
 .card .checkOut div{
@@ -99,7 +99,7 @@ border-radius: 4px;
     align-items: center;
     font-weight: bold;
     cursor: pointer;
-    padding: 20px;
+
 }
 
 .card .checkOut div:nth-child(2){
