--- a/index.css
+++ b/index.css
@@ -155,3 +155,16 @@ grid-template-columns: repeat(2,1fr);
 .listCard .count{
     margin: 0 10px;
 }
+.payButton {
+background-color: #4CAF50; /* Green */
+border: none;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin: 4px 2px;
+cursor: pointer;
+border-radius: 4px;
+}
