--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body{
 display: flex;
 justify-content: space-between;
 align-items: center;
-background-color: #4CAF50;
+background-color: none;
 padding: 10px 20px;
 }
 .navbar a {
