--- a/index.css
+++ b/index.css
@@ -7,11 +7,11 @@ body{
 display: flex;
 justify-content: space-between;
 align-items: center;
-background-color: #4CAF50;
+background-color: none;
 padding: 10px 20px;
 }
 .navbar a {
-color: white;
+color: black;
 text-decoration: none;
 padding: 14px 20px;
 transition: background-color 0.3s;
@@ -29,7 +29,7 @@ display: flex;
 
 .container{
     width: 1000px;
-    margin: auto;
+    margin: 10px 10px;
     transition: 0.5s;
 }
 
