--- a/index.css
+++ b/index.css
@@ -3,8 +3,15 @@ body{
     font-family: system-ui;
 }
 
+.navbar {
+display: flex;
+justify-content: space-between;
+align-items: center;
+background-color: #4CAF50;
+padding: 10px 20px;
+}
 .navbar a {
-color: black;
+color: white;
 text-decoration: none;
 padding: 14px 20px;
 transition: background-color 0.3s;
